@@ -207,7 +207,7 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   move_needs_desk               "'Move To' action requires a Desk."
   desk_requires_move            "Desk may only be used with 'Move To' action"
   duplicate_alert               "This alert duplicates an existing alert. Not added."
-  object_type_requires_id       "Object Type and Object ID must both be specified or both be left empty."
+  object_id_requires_type       "Object Type must be specified if Object ID is specified or both may be left empty."
   media_have_no_desks           "Media objects cannot be placed on desks."
   no_object_with_that_id        "There is currently no $type in the system with ID $id."
 </Module>
