@@ -2,7 +2,7 @@
 
 <tmpl_lang Below are the criteria that triggered this alert:>
 
-<tmpl_lang ACTION:> <tmpl_var action> <tmpl_if object_specific><tmpl_var object_type> <tmpl_var object_id></tmpl_if>
+<tmpl_lang ACTION:> <tmpl_var action> <tmpl_var object_type><tmpl_if object_specific> <tmpl_var object_id></tmpl_if>
 <tmpl_if category><tmpl_lang CATEGORY:> <tmpl_var category></tmpl_if>
 <tmpl_if desk><tmpl_lang DESK:> <tmpl_var desk></tmpl_if>
 
